# CloudGPT-Fin_Ops

./: .gitignore  Dockerfile  README.md  benchmark.py  debug_llm.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  visual_demo.py
aws_cost_env/: __init__.py  client.py  models.py
server/: __init__.py  app.py  environment.py  run.py
